--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
     "lucide-react": "^0.360.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-simple-keyboard": "^3.7.105",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
