--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,12 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@components": ["./components/*"],
+      "@data": ["./data/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
